--- a/AngularMvcProject/Views/wizard/wizard.cshtml
+++ b/AngularMvcProject/Views/wizard/wizard.cshtml
@@ -343,7 +343,7 @@
                 <div class="container_div">
 
                     <div class="row setup-content" id="step-1" ng-hide="firstStep">
-                        <form ng-submit="submitInfo(step1)" name="step1" novalidate class="css-form">
+                        <form ng-submit="submitInfo(step1)" name="step1" novalidate class="css-form" >
                             <div class="col-xs-12">
                                 <div class="col-md-12">
                                     <div class="welcome_div">
@@ -368,20 +368,20 @@
                                     <div class="group_label">
                                         <p>Setup only takes a moment, you'll be booking appointments in no time.</p>
                                         <div class="form-group">
-                                            <label class="control-label">Your Business</label>
-                                            <input maxlength="100" type="text"  class="form-control" ng-model="businessName" placeholder="Business Name" name="buisnessName" required />
+                                            <label class="control-label" >Your Business</label>
+                                            <input maxlength="100" type="text"  class="form-control" ng-model="businessName" id="businessName" placeholder="Business Name" name="buisnessName"  required />
                                         </div>
                                         <div class="form-group">
                                             <label class="control-label">Industry:</label>
 
-                                            <select class="form-control" ng-model="selectedIndustry" data-ng-options="Industry.id as Industry.name for Industry in businessIndustry" name="Industry" required>
-                                                <option value="" selected="selected">Choose Industry...</option>
+                                            <select class="form-control" ng-model="selectedIndustry" data-ng-options="Industry.id as Industry.name for Industry in businessIndustry" name="Industry"  >
+                                                <option value="" selected="selected" >Choose Industry...</option>
                                             </select>
                                         </div>
 
                                         <div class="form-group">
                                             <label class="control-label">Phone No:</label>
-                                            <input maxlength="100" type="text" class="form-control" placeholder="Business Phone" ng-model="businessPhone" name="buisnessPhone" required />
+                                            <input maxlength="100" type="text" class="form-control" placeholder="Business Phone" ng-model="businessPhone" name="buisnessPhone"  />
                                         </div>
 
                                     </div>
@@ -535,7 +535,7 @@
                                                 <div class="setmore back_btn">
                                                     <button type="button" class="btn btn-default" ng-click="backFourthStep()"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
                                                     @*<button class="btn btn-primary nextBtn btn-lg pull-right" type="submit">Next <i class="fa fa-chevron-right" aria-hidden="true"></i></button>*@
-                                                    <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" ng-click="redirection()">Next <i class="fa fa-chevron-right" aria-hidden="true"></i></button>
+                                                    <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Next <i class="fa fa-chevron-right" aria-hidden="true"></i></button>
                                                 </div>
                                             </div>
                                         </div>
@@ -608,17 +608,17 @@
                                                 <div class="row">
                                                     <div class="col-md-4 col-sm-4 col-xs-12">
                                                         <div class="form-group ">
-                                                            <input type="text" class="form-control" id="" ng-model="sampleService" placeholder="Sample Service" name="sampleService" required>
+                                                            <input type="text" class="form-control" id="sampleService" ng-model="sampleService" placeholder="Sample Service" name="sampleService" required>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-2 col-sm-2 col-xs-12">
                                                         <div class="form-group ">
-                                                            <input type="text" class="form-control" id="" ng-model="serviceTime" placeholder="0 min" name="serviceTime" required>
+                                                            <input type="text" class="form-control" id="serviceTime" ng-model="serviceTime" placeholder="0 min" name="serviceTime" required>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-2 col-sm-2 col-xs-12">
                                                         <div class="form-group">
-                                                            <input type="text" class="form-control" id="" ng-model="servicePrice" placeholder="(₹) 0" name="servicePrice" required>
+                                                            <input type="text" class="form-control" id="servicePrice" ng-model="servicePrice" placeholder="(₹) 0" name="servicePrice" required>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-4 col-sm-4 col-xs-12">
@@ -633,7 +633,7 @@
                                                                     <li>Who can perform this service?</li>
                                                                     <li><input type="checkbox" class="staffcheckbox" name="" value="" ng-model="allstaffchecked" ng-click="toggleAllSelection()"> All Staff</li>
                                                                     <li ng-repeat="staff in staffInfo">
-                                                                        <input type="checkbox" ng-click="toggleSelection()" class="staffcheckbox" ng-model="staff.confirmed"> {{staff.staffName}}
+                                                                        <input type="checkbox" ng-click="toggleSelection()" class="staffcheckbox" ng-model="staff.confirmed" > {{staff.staffName}}
 
                                                                     </li>
                                                                 </ul>
@@ -654,7 +654,7 @@
         </div>
     </div>
 
-    <script>
+    @*<script>
         $(document).ready(function () {
 
             var navListItems = $('div.setup-panel div a'),
@@ -675,6 +675,6 @@
 
             $('div.setup-panel div a.btn-primary').trigger('click');
         });
-    </script>
+    </script>*@
 </div>
 
