--- a/AngularMvcProject/Views/dashboard/dashboard.cshtml
+++ b/AngularMvcProject/Views/dashboard/dashboard.cshtml
@@ -1,7 +1,24 @@
-﻿
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dashboard</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link href="~/Content/Assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/Assets/fonts/Font_stylesheet.css" rel="stylesheet">
+    <link href="~/Content/Assets/css/icon.css" rel="stylesheet">
+    <link href="~/Content/Assets/css/animate.css" rel="stylesheet">
+    <link href="~/Content/Assets/css/custom.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="~/Content/Assets/js/bootstrap.min.js"></script>
+    <script src="~/Content/Assets/js/jquery.js"></script>  
+    <script src="~/App/controller/dashboard.js"></script>
+</head>
 
-<div ng-app="bookingApp">
-    <div ng-controller="dashboardController">
+<body ng-app="MyApp" ng-controller="MyController">
     <header class="top">
         <div class="logo_section"> <a class="logo" href="#"></a><img src="images/logo.png" alt="Logo"></a> </div>
         <h1> Setting </h1>
@@ -321,5 +338,5 @@
             })
         });
     </script>
-</div>
-</div>
+</body>
+</html>
