--- a/AngularMvcProject/App/View/dashboard/dashboard.html
+++ b/AngularMvcProject/App/View/dashboard/dashboard.html
@@ -133,7 +133,7 @@
             </li>
             <li class="side-nav-tooltip" id="side-calendar" data-placement="right" data-toggle="tooltip" data-original-title="Calendar"> <a href="#" data-toggle="tab" class="setmore-icon-calendar-31" id="startCalendar"><small>Calendar</small></a> </li>
             <li class="side-nav-tooltip" id="side-customers" title="" data-toggle="tooltip" data-original-title="Customers" data-placement="right">
-                <a href="#" data-toggle="tab" class="setmore-icon-users2" id="side-nav-customers"><small>Customers</small></a>
+                <a href="#/customer" data-toggle="tab" class="setmore-icon-users2" id="side-nav-customers"><small>Customers</small></a>
             </li>
             <li class="side-nav-tooltip" id="side-profile" data-toggle="tooltip" data-original-title="Apps &amp; Integrations" data-placement="right">
                 <a href="#" data-toggle="tab" class="setmore-icon-laptop-phone"><small>Profile&nbsp;</small></a>
@@ -343,7 +343,7 @@
                         <div class="row">
 
                             <div class="col-md-12">
-                                <div id="addCustomerPopup" class="addCustomer bottomArrow addServices">
+                                <div id="addStaffPopup" class="addCustomer bottomArrow addServices">
                                     <div class="arrow"></div>
                                     <h3 class="addCustomerTitle">Add New Customer</h3>
                                     <div class="addcustomerContent">
@@ -362,7 +362,7 @@
 
                                             <div class="clearfix"></div>
                                         </div>
-                                        <button id="addnewCustomer" class="btn addCustomerbtn">Add Customer</button>
+                                        <button id="addnewStaff" class="btn addCustomerbtn">Add Customer</button>
                                     </div>
                                 </div>
                             </div>
