--- a/AngularMvcProject/App/View/wizard/wizard.html
+++ b/AngularMvcProject/App/View/wizard/wizard.html
@@ -300,7 +300,7 @@
 
     <div class="fixed_div" ng-controller="bookingController" data-ng-init="init()">
         <div style="width: 100%;text-align: center;position: absolute;z-index: 999999; top:65px;" ng-if="IsVisible"><span id="voice-box" class="noDisplay" style="background:yellow; padding:5px 10px; border-radius:0 0 2px 2px;" ng-bind="MessageText"></span></div>
-        <div class="demo_wizard">
+        <div class="demo_wizard wizardSec">
             <div class="demo_snipt">
                 <div class="wizar_bg"></div>
                 <div class="stepwizard">
@@ -343,7 +343,7 @@
                     <div class="row setup-content" id="step-1" ng-hide="firstStep">
                         <form ng-submit="submitInfo(step1)" name="step1" novalidate class="css-form">
                             <div class="col-xs-12">
-                                <div class="col-md-12">
+                                <div class="col-md-12 wizardPadDiv">
                                     <div class="welcome_div">
                                         <div class="row">
                                             <div class="col-md-8 col-sm-8 col-xs-8">
@@ -391,7 +391,7 @@
                     <div class="row setup-content" id="step-2" ng-hide="secondStep">
                         <form ng-submit="setUpBusiness()" name="step2">
                             <div class="col-xs-12">
-                                <div class="col-md-12">
+                                <div class="col-md-12 wizardPadDiv">
                                     <div class="welcome_div">
                                         <div class="row">
                                             <div class="col-md-8 col-sm-8 col-xs-8">
@@ -447,81 +447,81 @@
                     <div class="row setup-content" id="step-3" ng-hide="thirdStep">
                         <!--<form ng-submit="addStaff()" name="step3">-->
                              <div class="col-xs-12">
-                                <div class="col-md-12">
-                                    <div class="welcome_div">
-                                        <div class="row">
-                                            <div class="col-md-8 col-sm-8 col-xs-8">
-                                                <div class="setmore">
-                                                    <h2>Add Your Staff</h2>
-                                                    <p>Don't worry - you can always edit these later</p>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-4 col-sm-4 col-xs-4">
-                                                <div class="setmore back_btn">
-                                                    <button type="button" class="btn btn-default" ng-click="backThirdStep()"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
-                                                    <!--@*<button class="btn btn-primary nextBtn btn-lg pull-right" type="submit">Next <i class=" fa fa-chevron-right" aria-hidden="true"></i></button>*@-->
-                                                    <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" ng-click="addStaff()">Next <i class=" fa fa-chevron-right" aria-hidden="true"></i></button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="group_label">
-                                        <div class="step3_form">
+                                 <div class="col-md-12 wizardPadDiv">
+                                     <div class="welcome_div">
+                                         <div class="row">
+                                             <div class="col-md-8 col-sm-8 col-xs-8">
+                                                 <div class="setmore">
+                                                     <h2>Add Your Staff</h2>
+                                                     <p>Don't worry - you can always edit these later</p>
+                                                 </div>
+                                             </div>
+                                             <div class="col-md-4 col-sm-4 col-xs-4">
+                                                 <div class="setmore back_btn">
+                                                     <button type="button" class="btn btn-default" ng-click="backThirdStep()"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
+                                                     <!--@*<button class="btn btn-primary nextBtn btn-lg pull-right" type="submit">Next <i class=" fa fa-chevron-right" aria-hidden="true"></i></button>*@-->
+                                                     <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" ng-click="addStaff()">Next <i class=" fa fa-chevron-right" aria-hidden="true"></i></button>
+                                                 </div>
+                                             </div>
+                                         </div>
+                                     </div>
+                                     <div class="group_label">
+                                         <div class="step3_form">
 
-                                            <div class="row" ng-repeat="company in staffInfo">
-                                                <div class="col-md-2 col-sm-2 text-center">
-                                                    <label for="exampleInputName2"><img src="../Content/Assets/images/user_img.png"></label>
-                                                </div>
-                                                <div class="col-md-4 col-sm-4">
-                                                    <div class="form-group ">
-                                                        <input type="text" class="form-control" id="staffName" ng-model="company.staffName" ng-blur="EditStaff(company)" value="" placeholder="">
-                                                        <!--<span ng-bind="company.staffName" class="form-control"></span>-->
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-5 col-sm-5">
-                                                    <div class="form-group">
-                                                        <input type="email" class="form-control" ng-model="company.staffEmail" ng-blur="EditStaff(company)" id="staffEmail" placeholder="">
-                                                        <!--<span ng-bind="company.staffEmail" class="form-control"></span>-->
+                                             <div class="row" ng-repeat="company in staffInfo">
+                                                 <div class="col-md-2 col-sm-2 text-center">
+                                                     <label for="exampleInputName2"><img src="../Content/Assets/images/user_img.png"></label>
+                                                 </div>
+                                                 <div class="col-md-4 col-sm-4">
+                                                     <div class="form-group ">
+                                                         <input type="text" class="form-control" id="staffName" ng-model="company.staffName" ng-blur="EditStaff(company)" value="" placeholder="">
+                                                         <!--<span ng-bind="company.staffName" class="form-control"></span>-->
+                                                     </div>
+                                                 </div>
+                                                 <div class="col-md-5 col-sm-5">
+                                                     <div class="form-group">
+                                                         <input type="email" class="form-control" ng-model="company.staffEmail" ng-blur="EditStaff(company)" id="staffEmail" placeholder="">
+                                                         <!--<span ng-bind="company.staffEmail" class="form-control"></span>-->
 
-                                                    </div>
-                                                </div><div class="col-md-1 col-sm-1">
-                                                    <a class="close_img" style="cursor: pointer;" ng-click="removeRow(company.Id)"><img src="../Content/Assets/images/close-img.png"></a>
-                                                </div>
-                                            </div>
-                                            <form ng-submit="addStaffItem(step3)" name="step3" novalidate class="css-form">
-                                                <div class="border_top">
-                                                    <div class="row">
-                                                        <div class="col-md-2 col-sm-2 text-center">
-                                                            <label for="exampleInputName2"><img src="../Content/Assets/images/user_img.png"></label>
-                                                        </div>
-                                                        <div class="col-md-4 col-sm-4">
-                                                            <div class="form-group ">
-                                                                <input type="text" ng-model="staffName" class="form-control" id="exampleInputName2" placeholder="Name" name="staffName" required>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-md-4 col-sm-4">
-                                                            <div class="form-group">
-                                                                <input type="email" ng-model="staffEmail" class="form-control" id="exampleInputEmail2" placeholder="Email" name="staffEmail" required>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-md-2 col-sm-2">
-                                                            <!--@*<button type="button" class="btn btn-default" ng-click="addStaffItem()">Add</button>*@-->
-                                                            <button type="submit" class="btn btn-default">Add</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                                     </div>
+                                                 </div><div class="col-md-1 col-sm-1">
+                                                     <a class="close_img" style="cursor: pointer;" ng-click="removeRow(company.Id)"><img src="../Content/Assets/images/close-img.png"></a>
+                                                 </div>
+                                             </div>
+                                             <form ng-submit="addStaffItem(step3)" name="step3" novalidate class="css-form">
+                                                 <div class="border_top">
+                                                     <div class="row">
+                                                         <div class="col-md-2 col-sm-2 text-center">
+                                                             <label for="exampleInputName2"><img src="../Content/Assets/images/user_img.png"></label>
+                                                         </div>
+                                                         <div class="col-md-4 col-sm-4">
+                                                             <div class="form-group ">
+                                                                 <input type="text" ng-model="staffName" class="form-control" id="exampleInputName2" placeholder="Name" name="staffName" required>
+                                                             </div>
+                                                         </div>
+                                                         <div class="col-md-4 col-sm-4">
+                                                             <div class="form-group">
+                                                                 <input type="email" ng-model="staffEmail" class="form-control" id="exampleInputEmail2" placeholder="Email" name="staffEmail" required>
+                                                             </div>
+                                                         </div>
+                                                         <div class="col-md-2 col-sm-2">
+                                                             <!--@*<button type="button" class="btn btn-default" ng-click="addStaffItem()">Add</button>*@-->
+                                                             <button type="submit" class="btn btn-default">Add</button>
+                                                         </div>
+                                                     </div>
+                                                 </div>
 
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
+                                             </form>
+                                         </div>
+                                     </div>
+                                 </div>
                             </div>
 
                     </div>
                     <div class="row setup-content" id="step-4" ng-hide="fourthStep">
                         <div class="col-xs-12">
                             <form ng-submit="addServiceItem(step4)" name="step4" novalidate class="css-form">
-                                <div class="col-md-12">
+                                <div class="col-md-12 wizardPadDiv">
                                     <div class="welcome_div">
                                         <div class="row">
                                             <div class="col-md-8 col-sm-8">
@@ -583,15 +583,15 @@
                                                             <div class="dropdown">
                                                                 <button class="angle_down" id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-click="showDropDownBinded($index)">
                                                                     <i class="fa fa-user" aria-hidden="true"></i>{{service.staffCheckedCount}}<i class="fa fa-angle-down" aria-hidden="true"></i>
-                                                                   
+
                                                                 </button>
-                                                                <ul class="dropdown-menu" style="display:block" aria-labelledby="dLabel" ng-hide="showStaffBinded[$index]">
+                                                                <ul class="dropdown-menu" style="display:block;max-height:200px;overflow-y:auto;" aria-labelledby="dLabel" ng-hide="showStaffBinded[$index]">
                                                                     <li>Who can perform this service?</li>
-                                                                    <li><input type="checkbox" name="" value="" ng-click="togglealldataSelection(service)" ng-blur="Updateallstaff(service)" ng-model="service.AllStaffChecked"> All Staff</li>
+                                                                    <li><input type="checkbox" name="" class="servicestaffcheckbox" value="" ng-click="togglealldataSelection(service)" ng-blur="Updateallstaff(service)" ng-model="service.AllStaffChecked"> All Staff</li>
                                                                     <li ng-repeat="item in service.staff">
-                                                                        <input type="checkbox" name="selectedFruits[]"
+                                                                        <input type="checkbox" name="selectedFruits[]" class="servicestaffcheckbox"
                                                                                value="{{item.staffEmail}}"
-                                                                               ng-blur="toggledataSelection(service, item.Id,item.confirmed)" ng-model="item.confirmed" ng-bind="item.Id"> {{item.FirstName}}
+                                                                               ng-blur="toggledataSelection(service, item.Id,item.confirmed)" ng-click="allstaffselection(service)" ng-model="item.confirmed" ng-bind="item.Id"> {{item.FirstName}}
                                                                     </li>
                                                                 </ul>
                                                             </div>
@@ -628,7 +628,7 @@
                                                                 </button>
                                                                 <!--@*<button type="submit" class="btn btn-default" ng-click="addServiceItem()">Add</button>*@-->
                                                                 <button type="submit" class="btn btn-default">Add</button>
-                                                                <ul class="dropdown-menu" style="display:block;" aria-labelledby="dLabel" ng-hide="showStaff">
+                                                                <ul class="dropdown-menu" style="display:block;max-height: 200px;overflow-y:auto;" aria-labelledby="dLabel" ng-hide="showStaff">
                                                                     <li>Who can perform this service?</li>
                                                                     <li><input type="checkbox" class="staffcheckbox" name="" value="" ng-model="allstaffchecked" ng-click="toggleAllSelection()"> All Staff</li>
                                                                     <li ng-repeat="staff in staffInfo">
